# Evil-JWT-Force

./:  (HS256)  .gitignore  .pre-commit-config.yaml  Dockerfile  EvilJWTForce.spec  Evil_JWT_Force.spec  INSTALL.md  LICENSE  MANIFEST.in  README.md  README_IA.md  TESTING.md  UI_API_README.md  __init__.py  app.py  build_executables.py  build_protected.bat  build_protected.sh  check_dependencies.py  clean.sh  create_releases.bat  create_releases.sh  cxfreeze_setup.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dynamic_balance_sql.py  eviljwtforce.desktop  export_report.sh  install.bat  install.sh  install_ollama.py  installer_gui.py  installer_script.iss  jwtwordlist.txt  jwtwordlist2.txt  load_test.py  main.py  main_realtime_demo.py  main_realtime_gui.py  (+43 more)
APIs/: API驗證碼申請書.docx  openapi.json  sfn_cloudwalk.json  sfn_volvo.json
ai_module/: __init__.py  adaptive_fuzzer.py  ai_connection_tester.py  ai_feedback_engine.py  ai_interface.py  ai_worker.py  analyze_errors.py  api.py  auth_manager.py  chat_manager.py  custom_api.py  data_collector.py  enhanced_trainer.py  error_handler.py  example_integration.py  generate_test_data.py  generate_training_data.py  huggingface_api.py  jwt_predictor.py  llama_api.py  local_llm_api.py  model_trainer.py  ollama_api.py  openai_api.py  openai_manager.py  osint_infer.py  rbac_manager.py  realtime_collector.py  realtime_event_bus.py  run_pipeline.py  run_production.py  run_production_alerts.py  run_production_monitored.py  run_testing.py  run_training.py  security_manager.py  siem_integration.py  sql_injector_ai.py  test_integration.py  test_model.py  (+4 more)
ai_system/: autofix.py  chat_tui.py  context_analyzer.py  engine.py  main.py  strategy_selector.py
api/: jwt_api.py
blinker/: __init__.py  _saferef.py
config/: __init__.py  adaptive_fuzzer_config.json  ai_config.json  ai_settings.json  analyzer_config.json  auth_config.json  config.json  config.yaml  config_loader.py  constants.py  default_creds.txt  headers.py  jwt_predictor_config.json  openai_config.json  payloads.py  pix_endpoints.txt  rbac_config.json  security_config.json  settings.py  url_history.txt  url_targets.txt  validation_config.json
core/: __init__.py  attack_module_base.py  auth.py  balance_injector.py  bruteforce.py  burp_interceptor.py  cli.py  cli_feedback.py  fake_pix_confirmer.py  fuzzer.py  gui_feedback.py  jwt_bruteforce.py  jwt_bruteforcer.py  orchestrator.py  report.py  selenium_interceptor.py  sentry_simulator.py  sql_injector.py  sqli_interceptor.py  wordlist_generator.py
data/: ai_generated_wordlist.txt  ai_learning.json  domain_knowledge.json  fuzzer_learning.json  jwt_predictor_history.json  semantic_clusters.json
docs/: ARCHITECTURE.md  INSTALLATION.md  REQUIREMENTS.md  index.md
gui/: ai_interface.py  ai_interface_fix.py  interface.py  qt_interface.py
modules/: __init__.py  aes_decrypt.py  auto_scanner.py  crypto_utils.py  db_integrator.py  fake_pix_module.py  fake_pix_payloads.py  fuzz_jwt.py  jwt_decryptor.py  jwt_utils_simple.py  osint_enhanced.py  osint_module.py  osint_scraper.py  scan_engine.py  scan_target.py  shodan_module.py  theharvester_module.py  token_bruteforce.py  voidsync_api.py  vuln_scanner.py  wordlist_engine.py  wordlist_manager.py
output/: __init__.py  auto_mode_log.txt  fake_pix_logs.txt  fakepix_scan_cache.json  invalid_credentials.txt  jwt_bruteforce_results.json  jwt_fuzz_test.json  jwt_test_report.html  osint_results.txt  scan_results.json  test_bruteforce_wordlist.txt  test_report.html  test_report_data.json  test_results.json  test_wordlist.txt  valid_credentials.txt  wordlist_custom.txt
reports/: __init__.py  report.html
schemas/: emvco.ksy
scripts/: __init__.py  build_protected.py  export_report.sh  jwt_analysis.py  obfuscator.py  qt_obfuscator.py  reset_logs.sh  setup_jwt_tools.py  start_auto.sh
testes/: test_aes_decrypt.py  test_auth.py  test_auto_scanner.py  (+15 more)
(+111 files in other folders)
